Added firefox support